fixes wiggle, blog spacing, broken link, and shrunk projects

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ light brown: #9b786f
   pointer-events: none;
 } */
 
+/* big screen */
 @media screen and (min-width: 601px) {
    .fast-text,
    .intuitive-text,
@@ -92,17 +93,6 @@ light brown: #9b786f
    .highlight {
       font-size: 30px;
    }
-
-   .landingPage {
-      background-image: url(./pictures/fountain.gif);
-      background-size: cover;
-      background-position: top;
-      background-repeat: no-repeat;
-      min-width: 1024px;
-      min-height: 100vh;
-      width: 100vw;
-   }
-
    .blog-row {
       align-items: stretch;
    }
@@ -114,9 +104,68 @@ light brown: #9b786f
    Form {
       min-width: 400px;
    }
+
+   .graph .bar span:nth-child(3) {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      box-sizing: border-box;
+      margin: auto;
+      margin-left: 0%;
+      background: #faed26;
+      z-index: -1;
+      overflow: hidden;
+      width: 12%;
+      border-top-right-radius: 2vh;
+      border-bottom-right-radius: 2vh;
+   }
+
+   .landingPage {
+      background-image: url(./pictures/fountain.gif);
+      background-size: cover;
+      background-position: top;
+      background-repeat: no-repeat;
+      min-width: 1024px;
+      min-height: 100vh;
+      width: 100%;
+   }
 }
 
+/* medium screen like laptops */
+
+/* small screen */
 @media screen and (max-width: 601px) {
+   .font-white,
+   .highlight {
+      font-size: 20px;
+   }
+   .blog-row {
+      align-items: center;
+   }
+
+   Form {
+      min-width: 275px;
+   }
+
+   .graph .bar span:nth-child(3) {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      box-sizing: border-box;
+      margin: auto;
+      margin-left: 0%;
+      background: #faed26;
+      z-index: -1;
+      overflow: hidden;
+      width: 30%;
+      border-top-right-radius: 2vh;
+      border-bottom-right-radius: 2vh;
+   }
+
    .landingPage {
       background-image: url(./pictures/coffeeScaled3.gif);
       background-size: cover;
@@ -126,19 +175,6 @@ light brown: #9b786f
       min-height: 568px;
       width: 100vw;
       height: 100vh;
-   }
-
-   .font-white,
-   .highlight {
-      font-size: 20px;
-   }
-
-   Form {
-      min-width: 275px;
-   }
-
-   .blog-row {
-      align-items: center;
    }
 }
 
@@ -176,6 +212,11 @@ light brown: #9b786f
    width: 100%;
    height: auto;
 }
+.carousel {
+   max-width: 800px;
+   margin: auto;
+}
+
 .chat {
    background-color: rgb(37, 37, 37);
    padding: 10px 10px 10px 10px;
@@ -251,6 +292,7 @@ light brown: #9b786f
 .footer {
    min-height: 100vh;
    padding: 0px 20px 0px 20px;
+   margin-top: 70px;
 }
 
 .footer-title {
@@ -333,23 +375,6 @@ light brown: #9b786f
    background: #fffddd;
    height: 100%;
    z-index: -2;
-}
-
-.graph .bar span:nth-child(3) {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   right: 0;
-   left: 0;
-   box-sizing: border-box;
-   margin: auto;
-   margin-left: 0%;
-   background: #faed26;
-   z-index: -1;
-   overflow: hidden;
-   width: 30%;
-   border-top-right-radius: 2vh;
-   border-bottom-right-radius: 2vh;
 }
 
 .graph div.bar:nth-child(1) span:nth-child(1) {
